[package]
name = "dashboard-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Grafana dashboard generator for FrogDB metrics"
publish = false

[[bin]]
name = "dashboard-gen"
path = "src/main.rs"

[dependencies]
frogdb-metrics = { path = "../../crates/metrics" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
