[package]
name = "helm-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Helm chart code generator for FrogDB"
publish = false

[[bin]]
name = "helm-gen"
path = "src/main.rs"

[dependencies]
frogdb-server = { path = "../../crates/server" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
