[package]
name = "workflow-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GitHub Actions workflow generator for FrogDB"
publish = false

[[bin]]
name = "workflow-gen"
path = "src/main.rs"

[dependencies]
gh-workflow = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
insta = "1"
