[package]
name = "frogdb-acl"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Access Control List (ACL) system for FrogDB — authentication and authorization"

[dependencies]
frogdb-types.workspace = true
bytes.workspace = true
dashmap.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
