[package]
name = "frogdb-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Raft-based cluster coordination for FrogDB"

[dependencies]
openraft.workspace = true
rocksdb.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
semver = "1"
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
