[package]
name = "frogdb-config-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for the FrogDB config-param registry"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
