[package]
name = "frogdb-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "FrogDB configuration types and validation (no heavy runtime dependencies)"

[features]
turmoil = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
rand.workspace = true
