[package]
name = "frogdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Core data structures, commands, and storage for FrogDB"
autotests = false

[[test]]
name = "main"
path = "tests/main.rs"

[features]
shuttle = ["dep:shuttle", "frogdb-types/shuttle"]
usdt-probes = ["dep:usdt"]
test-utils = ["frogdb-cluster/test-utils"]
# Compile the deterministic FakeWalSink builder arm + fake-WAL registry. Enabled
# by the server's `turmoil` feature for simulation tests; never in production.
fake-wal = []
# Test-only public seam surface for the shard-driver harness. Feature-gates the
# public `drive*` wrapper methods on `ShardWorker` (and `ShardReceiver::try_recv`)
# so the integration harness under `tests/` can pump a worker deterministically;
# never enabled in production.
shard-driver = []

[dependencies]
frogdb-types.workspace = true
frogdb-protocol.workspace = true
frogdb-vll.workspace = true
frogdb-replication.workspace = true
frogdb-cluster.workspace = true
frogdb-persistence.workspace = true
frogdb-acl.workspace = true
frogdb-scripting.workspace = true
frogdb-search.workspace = true
bytes.workspace = true
dashmap.workspace = true
griddle.workspace = true
bitflags.workspace = true
thiserror.workspace = true
tracing.workspace = true
crc16.workspace = true
bitvec.workspace = true
tokio.workspace = true
tokio-util.workspace = true
parking_lot.workspace = true
rand.workspace = true
shuttle = { workspace = true, optional = true }
rocksdb.workspace = true
mlua.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
linked-hash-map.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
usdt = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
shuttle.workspace = true
proptest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
frogdb-commands.workspace = true
# Self-dev-dep enabling the test-only seam features for integration harnesses
# (mirrors frogdb-telemetry's `features = ["testing"]` self-dev-dep precedent).
frogdb-core = { path = ".", features = ["shard-driver", "fake-wal"] }
