[package]
name = "frogdb-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "RocksDB persistence layer for FrogDB — storage, WAL, serialization, and snapshots"

[features]
# Exposes RocksStore's test-only single-key / WAL-sync accessors and the
# `commit_raw_batch` seam to dependent crates' *test* builds (frogdb-core's
# crash-recovery suite). Additive and never enabled in a production build —
# only wired under `[dev-dependencies]` (see frogdb-core's manifest), and
# resolver "2" keeps it out of the normal dependency build.
test-support = []

[dependencies]
frogdb-types.workspace = true
frogdb-config.workspace = true
async-trait.workspace = true
rocksdb.workspace = true
flume.workspace = true
bytes.workspace = true
bitvec.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-metrics = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
