[package]
name = "frogdb-redis-regression"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
autotests = false

[[test]]
name = "main"
path = "tests/main.rs"

[dev-dependencies]
frogdb-test-harness.workspace = true
frogdb-server = { path = "../server" }
frogdb-protocol = { path = "../protocol" }
redis-protocol = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bytes.workspace = true
rstest = "0.23"
